feat: authentication added

--- a/src/index.scss
+++ b/src/index.scss
@@ -70,6 +70,7 @@ body {
       margin-bottom: 14px;
     }
     input {
+      color: var(--text);
       display: block;
       width: 100%;
       padding: 14px 16px;
