--- a/src/index.scss
+++ b/src/index.scss
@@ -34,6 +34,9 @@ button {
   background: none;
   border: none;
 }
+img {
+  object-fit: cover;
+}
 
 body {
   background-color: var(--main-bg);
@@ -225,6 +228,21 @@ body {
       left: 50%;
       transform: translateX(-50%);
     }
+    .unread {
+      background-color: green;
+      position: absolute;
+      color: #fff;
+      font-size: 0.65em;
+      font-weight: 600;
+      width: 16px;
+      height: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      top: 20px;
+      left: 60px;
+    }
 
     > .info {
       display: flex;
@@ -245,6 +263,11 @@ body {
         text-overflow: ellipsis;
       }
     }
+
+    .dateTime {
+      opacity: 50;
+      font-size: 0.75em;
+    }
   }
 }
 
@@ -255,6 +278,9 @@ body {
   flex: 2;
   // justify-content: end;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
 
   .chatTop {
     background-color: var(--com-bg);
@@ -288,10 +314,14 @@ body {
     flex-direction: column;
     // justify-content: end;
     width: 100%;
-    height: 100vh;
+    height: fit-content;
+    max-height: 100vh;
     overflow: hidden;
     overflow-y: scroll;
     padding: 70px 0;
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     .message {
       margin: 0 48px;
