feat: messages data structure change

--- a/src/index.scss
+++ b/src/index.scss
@@ -327,6 +327,7 @@ body {
     }
 
     .message {
+      scroll-behavior: smooth;
       margin: 0 48px;
       padding: 24px 32px;
       background-color: var(--mgs1);
