--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@
   --mgs1: #191d1e;
   --mgs2: #fbfbfb;
   --mgsText: #fff;
-  --chatBoxShadow: 0px 6px 10px 0px rgba(101, 101, 101, 0.25);
+  --chatBoxShadow: rgba(101, 101, 101, 0.25);
 }
 .dark:root {
   // --main-bg: #161819;
@@ -19,7 +19,7 @@
   --mgs1: #181a1c;
   --mgs2: #0f1011;
   --mgsText: #fff;
-  --chatBoxShadow: 0px 4px 20px -5.717092990875244px rgba(0, 0, 0, 0.15);
+  --chatBoxShadow: rgba(100, 100, 100, 0.1);
 }
 
 * {
@@ -117,6 +117,9 @@ body {
       border: 1px solid var(--text);
       margin-bottom: 25px;
       font-size: 1em;
+      &:focus {
+        border-color: #628eff;
+      }
     }
     label {
       margin-bottom: 25px;
@@ -504,6 +507,7 @@ body {
     width: 100%;
     height: 100%;
     max-height: 100vh;
+    padding-top: 20px;
     overflow: hidden;
     overflow-y: scroll;
 
@@ -517,7 +521,9 @@ body {
       padding: 24px 32px;
       background-color: var(--mgs1);
       color: var(--mgsText);
-      box-shadow: var(--chatBoxShadow);
+      -webkit-box-shadow: 4px 7px 5px 1px var(--chatBoxShadow);
+      -moz-box-shadow: 4px 7px 5px 1px var(--chatBoxShadow);
+      box-shadow: 4px 7px 5px 1px var(--chatBoxShadow);
       height: auto;
       border-radius: 20px;
       width: fit-content;
@@ -639,22 +645,11 @@ body {
         width: 100%;
         color: var(--text);
       }
-      // textarea {
-      //   font-size: 1em;
-      //   padding: 5px 0 0;
-      //   width: 100%;
-      //   height: 100%;
-      //   max-height: 110px;
-      //   color: var(--text);
-      //   font-family: inherit;
-      // }
+
       .inputIcon {
         color: var(--text);
         padding: 5px;
         margin: 0 5px;
-        &:hover {
-          color: var(--hovCol);
-        }
       }
       button {
         rotate: 45deg;
